--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,9 @@
     "angular": "~1.2.18",
     "angular-route": "~1.2.18",
     "kineticjs": "~5.1.0",
-    "lodash": "~2.4.1"
-
+    "lodash": "~2.4.1",
+    "core-elements": "Polymer/core-elements#~0.3.4",
+    "paper-elements": "Polymer/paper-elements#~0.3.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.18"
