--- a/bower.json
+++ b/bower.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "angular": "~1.2.18",
-    "angular-route": "~1.2.18",
     "kineticjs": "~5.1.0",
     "lodash": "~2.4.1",
     "core-elements": "Polymer/core-elements#~0.3.4",
-    "paper-elements": "Polymer/paper-elements#~0.3.4"
+    "paper-elements": "Polymer/paper-elements#~0.3.4",
+    "angular-ui-router": "~0.2.10"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.18"
