--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
     "lodash": "~2.4.1",
     "core-elements": "Polymer/core-elements#~0.3.4",
     "paper-elements": "Polymer/paper-elements#~0.3.4",
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "highcharts-ng": "~0.0.6",
+    "highcharts": "git@github.com:highslide-software/highcharts-release.git#v4.0.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.18"
