--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "paper-elements": "Polymer/paper-elements#~0.3.4",
     "angular-ui-router": "~0.2.10",
     "highcharts-ng": "~0.0.6",
-    "highcharts": "git@github.com:highslide-software/highcharts-release.git#v4.0.3"
+    "highcharts": "git@github.com:highslide-software/highcharts-release.git#v4.0.3",
   },
   "devDependencies": {
     "angular-mocks": "~1.2.18"
